--- a/css/main.css
+++ b/css/main.css
@@ -1,108 +1,164 @@
- :root {
-     --primary-text-color:#757575;
-     --secondary-text-color: #ffffff;
-     --title-text-color: #212121;
-     --accent-color:#2196F3;
- }
+:root {
+  --primary-text-color:#757575;
+  --secondary-text-color: #ffffff;
+  --title-text-color: #212121;
+  --accent-color:#2196F3;
+}
 
- .logo {
-     font-family: Raleway, sans-serif;
- }
+ /* logo */
  
- .web {
-     color: var(--accent-color);
-     font-weight: bold;
- }
+.web {
+    color: var(--accent-color);
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    text-decoration: none;
+}
  
- .studio {
-     color: #000000;
-     font-weight: bold;
- }
+.studio {
+    color: #000000;
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    text-decoration: none;
+}
 
- .studiof {
-     color: var(--secondary-text-color);
-     font-weight: bold;
- }
+.studiof {
+    color: var(--secondary-text-color);
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 1.18;
+    text-decoration: none;
+}
  
  /*Стилизация страницы Студия*/
 
-/*.logo {
-    color: #000000
+
+body {
+    background-color: #E5E5E5;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
 }
-.logo:hover,
-.logo:focus {
-    color: #2196F3
-}*/
 
+ul {
+    list-style: none;
+}
 
- body {
-     background-color:#ffffff;
-     font-family: Roboto, sans-serif;
- }
+.site-nav .link {
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+}
 
- ul {
-     list-style: none;
- }
+.site-nav .link:hover,
+.site-nav .link:focus {
+    color: var(--accent-color);
+}
 
- .site-nav .link {
-     color: var(--title-text-color);
-
- }
-
- .site-nav .link:hover,
- .site-nav .link:focus {
-     color: var(--accent-color);
- }
-
- .site-nav .link.current {
-     color: var(--accent-color);
- }
+.site-nav .link.current {
+    color: var(--accent-color);
+}
 
 .site-contact .link {
     color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
- .site-contact .link:hover,
- .site-contact .link:focus {
-     color: var(--accent-color);
- }
+.site-contact .link:hover,
+.site-contact .link:focus {
+    color: var(--accent-color);
+}
 
- .hero-title {
-     color: var(--secondary-text-color);
- }
- .section-title {
-     color: var(--title-text-color);
- }
+.hero-title {
 
- .feature-list.title {
-     color: var(--title-text-color);
- }
+    color: var(--secondary-text-color);
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36
+    text-align: center;
+    letter-spacing: 0.06em;
+}
+.section-title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+}
 
- .title-definition {
-     color: var(--primary-text-color);
- }
+.feature-list .title {
+    color: var(--title-text-color);
+}
 
- .work-list .title {
-     color: var(--secondary-text-color);
- }
+.feature-list .title,
+.work-list .title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;     
+}
 
- .name {
-     color: var(--title-text-color);
- }
+.title-definition {
+    color: var(--primary-text-color);
+    font-size: 14px;
+    line-height: 1.71;
+}
 
- .speciality {
-     color: var(--primary-text-color);
- }
+.work-list .title {
+    color: var(--secondary-text-color);
+}
+
+
+.name {
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;  
+    text-align: center;
+}
+
+.speciality {
+    color: var(--primary-text-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+}
 
  /*Button*/
 
- .button {
-     color: var(--secondary-text-color) ;
-     background-color: var(--accent-color) ;
- }
+.button {
+    color: var(--secondary-text-color) ;
+    background-color: var(--accent-color) ;
+    font-family: inherit;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.8;
+    letter-spacing: 0.06em;
+    text-decoration: none
+}
 
 .social-networks .link {
     color:#AFB1B8 ;
+}
+
+.social-net .link {
+    color: var(--secondary-text-color);
 }
 
 .social-networks .link:hover,
@@ -110,38 +166,92 @@
     color: var(--accent-color);
 }
 
-/*.social-net .link {
-    color:#ffffff rgba(f, f, f, 0.1);
-}*/
-
 .social-net .link:hover,
 .social-net .link:focus {
     color: var(--accent-color);
 }
 
+.footer {
+    font-family: Roboto, sans-serif;
+    background-color: #2F303A;
+}
 
-/*цвет титульного текста 212121*/
-/*основной цвет текста 757575*/
-/*вторичный цвет текста FFFFFF*/
-/*акцент цвет 2196F3*/
-/* адрес и телефон в футере FFFFFF 60%*/
-/*иконки клтентов и соц сетей цвет AFB1B8*/
-/*backgraund color ffffff*/
-/*вторичный цвет фона F5F4FA*/
-/*первичный цыет фона ffffff*/
+.offer {
+    color: var(--secondary-text-color);
+}
+
+.location {
+    color: var(--secondary-text-color);
+}
+
+.site-contactf .link {
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none
+}
+
+.location,
+.site-contactf .link {
+    font-size: 14px;
+    line-height: 1.71;
+}
+
 
 
 /*Стилизация страницы Портфолио*/
-/*lin-height в коде заменяем на 1.2*/
-
 
 .button-list {
     color: var(--title-text-color);
-    background-color: #F5F4FA;
+    font-family: inherit;
 }
 
 .button-list .link:hover,
 .button-list .link:focus {
     color: var(--secondary-text-color);
     background-color: var(--accent-color);
+}
+
+.name {
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;  
+    text-align: center;
+}
+
+.speciality {
+    color: var(--primary-text-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+}
+
+.section-title .text {
+    font-size: 18px;
+    line-height: 1.56;
+}
+
+
+.footer {
+    font-family: Roboto, sans-serif;
+    background-color: #2F303A;
+}
+
+.offer {
+    color: var(--secondary-text-color);
+}
+
+.location {
+    color: var(--secondary-text-color);
+}
+
+.site-contactf .link {
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none
+}
+
+.location,
+.site-contactf .link {
+    font-size: 14px;
+    line-height: 1.71;
 }
